--- a/AspNetCoreAngular_EF5/ClientApp/src/app/vehicle-form/vehicle-form.component.html
+++ b/AspNetCoreAngular_EF5/ClientApp/src/app/vehicle-form/vehicle-form.component.html
@@ -1,28 +1,33 @@
 <h1>New Vehicle</h1>
-<form>
+<p>
+  {{ vehicle | json }}
+</p>
+<form (ngSubmit)="submit()" #f="ngForm">
   <div class="form-group">
     <label for="make">Make</label>
-    <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.make" name="make">
+    <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.makeId" name="make" #make="ngModel" required>
       <option value=""></option>
       <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
     </select>
+    <div class="alert alert-danger" *ngIf="make.touched && !make.valid">Please specific make</div>
   </div>
   <div class="form-group">
     <label for="model">Model</label>
-    <select id="model" class="form-control">
+    <select id="model" class="form-control" [(ngModel)]="vehicle.modelId" name="model" #model="ngModel" required>
       <option value=""></option>
       <option *ngFor="let m of models" value="{{ m.id }}">{{ m.name }}</option>
     </select>
+    <div class="alert alert-danger" *ngIf="model.touched && !model.valid">Please specific model</div>
   </div>
   <p>Is this vehicle registered?</p>
   <label for="registered" class="radio-inline">
-    <input type="radio" id="registered" name="isRegistered"> Yes
+    <input type="radio" id="registered" name="isRegistered" value="true" [(ngModel)]="vehicle.isRegistered"> Yes
   </label>
   <label for="notRegistered" class="radio-inline">
-    <input type="radio" id="notRegistered" name="isRegistered"> No
+    <input type="radio" id="notRegistered" name="isRegistered" value="false" [(ngModel)]="vehicle.isRegistered"> No
   </label>
   <h2>Features</h2>
-  <div class="checkbox" *ngFor="let f of features">
+  <div class="checkbox" *ngFor="let f of features" (change)="onFeaturesToggled(f.id, $event)">
     <label for="feature_{{ f.id }}">
       <input type="checkbox" id="feature_{{ f.id }}"> {{ f.name }}
     </label>
@@ -30,15 +35,18 @@
   <h2>Contact</h2>
   <div>
     <label for="contactName">Name</label>
-    <input id="contactName" type="text" class="form-control">
+    <input id="contactName" type="text" class="form-control" [(ngModel)]="vehicle.contact.name" name="contactName" #contactName="ngModel" required>
   </div>
+  <div class="alert alert-danger" *ngIf="contactName.touched && !contactName.valid">Please specific contactName</div>
   <div>
     <label for="contactPhone">Phone</label>
-    <input id="contactPhone" type="text" class="form-control">
+    <input id="contactPhone" type="text" class="form-control" [(ngModel)]="vehicle.contact.phone" name="contactPhone" #contactPhone="ngModel" required>
   </div>
+  <div class="alert alert-danger" *ngIf="contactPhone.touched && !contactPhone.valid">Please specific contactPhone</div>
   <div>
     <label for="contactEmail">Email</label>
-    <input id="contactEmail" type="text" class="form-control">
+    <input id="contactEmail" type="text" class="form-control" [(ngModel)]="vehicle.contact.email" name="contactEmail">
   </div>
+  <button class="btn btn-sm btn-primary" type="submit" [disabled]="!f.valid">Save</button>
 </form>
 
