Bo sung chuc nang danh sach vehicle

--- a/AspNetCoreAngular_EF5/ClientApp/src/app/vehicle-form/vehicle-form.component.html
+++ b/AspNetCoreAngular_EF5/ClientApp/src/app/vehicle-form/vehicle-form.component.html
@@ -21,15 +21,15 @@
   </div>
   <p>Is this vehicle registered?</p>
   <label for="registered" class="radio-inline">
-    <input type="radio" id="registered" name="isRegistered" value="true" [(ngModel)]="vehicle.isRegistered"> Yes
+    <input type="radio" id="registered" name="isRegistered" [value]="true" [(ngModel)]="vehicle.isRegistered"> Yes
   </label>
   <label for="notRegistered" class="radio-inline">
-    <input type="radio" id="notRegistered" name="isRegistered" value="false" [(ngModel)]="vehicle.isRegistered"> No
+    <input type="radio" id="notRegistered" name="isRegistered" [value]="false" [(ngModel)]="vehicle.isRegistered"> No
   </label>
   <h2>Features</h2>
-  <div class="checkbox" *ngFor="let f of features" (change)="onFeaturesToggled(f.id, $event)">
+  <div class="checkbox" *ngFor="let f of features">
     <label for="feature_{{ f.id }}">
-      <input type="checkbox" id="feature_{{ f.id }}"> {{ f.name }}
+      <input type="checkbox" id="feature_{{ f.id }}" (change)="onFeaturesToggled(f.id, $event)" [checked]="vehicle.features.includes(f.id)"> {{ f.name }}
     </label>
   </div>
   <h2>Contact</h2>
@@ -48,5 +48,5 @@
     <input id="contactEmail" type="text" class="form-control" [(ngModel)]="vehicle.contact.email" name="contactEmail">
   </div>
   <button class="btn btn-sm btn-primary" type="submit" [disabled]="!f.valid">Save</button>
+  <button class="btn btn-sm btn-danger" type="button" *ngIf="vehicle.id" (click)="delete()">Delete</button>
 </form>
-
